fixed size of search button to work for German edition on IE

--- a/public/stylesheets/simple.css
+++ b/public/stylesheets/simple.css
@@ -67,7 +67,7 @@ font-size: 13px;
 		background-color: #0000b6;
 		vertical-align: middle;
 		height: 36px;
-		width: 163;
+		width: 1;
 		border: 0px;
 }
 
